--- a/src/style.scss
+++ b/src/style.scss
@@ -16,3 +16,86 @@ $footer-padding: 3rem 1.5rem;
 .rotate {
   animation: rotating 10s linear infinite;
 }
+
+// dark styling
+.main-section {
+  background-color: #040404;
+  padding-top: 7.5%;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+.header-section {
+  background-color: #1c1c1c;
+  width: 100%;
+  position: absolute;
+}
+body {
+  height: 100%;
+  position: relative;
+}
+html {
+  height: 100%;
+}
+.img-display {
+  border: 3px solid #feecf0;
+  border-radius: 6px;
+}
+
+// replicate feel of a physical console (bmd atem mini pro for inspiration)
+.blink-bd-rw {
+  animation: blink_bdrw 1s infinite;
+}
+@keyframes blink_bdrw {
+  0% {
+    border-color: #ff3c3c;
+  }
+  50% {
+    border-color: #feecf0;
+  }
+  100% {
+    border-color: #ff3c3c;
+  }
+}
+
+.blink-bg-rw {
+  animation: blink_bgrw 1s infinite;
+}
+@keyframes blink_bgrw {
+  0% {
+    background-color: #ff3c3c;
+  }
+  50% {
+    background-color: #feecf0;
+  }
+  100% {
+    background-color: #ff3c3c;
+  }
+}
+
+.status {
+  justify-content: right;
+  align-items: center;
+  display: flex;
+  background-color: #1c1c1c;
+}
+.status .button {
+  margin: 0.5rem;
+}
+.obs-stats[disabled] {
+  //color: black;
+  //background-color: white;
+  //margin: 0.5rem;
+  //width: 100%;
+  //line-height: 1.5;
+  //text-align: center;
+  //vertical-align: center;
+  //border-radius: 4px;
+  background-color: #1c1c1c;
+  color: white;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: 0;
+}
