add audio mixer

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,9 @@ $footer-padding: 3rem 1.5rem;
 $family-primary: monospace;
 
 @import "~bulma/bulma.sass";
+@import "~bulma-slider/src/sass/index.sass";
+
+
 
 @keyframes rotating {
   from {
