tweak layout for meguro studio

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 $footer-padding: 3rem 1.5rem;
 
 $family-primary: monospace;
+$dropdown-menu-min-width: 24rem;
 
 @import "~bulma/bulma.sass";
 @import "~bulma-slider/src/sass/index.sass";
