--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-$footer-padding: 3rem 1.5rem;
-
-@import "~bulma/bulma.sass";
+@use 'bulma/bulma.sass' as * with (
+  $footer-padding: 3rem 1.5rem
+);
 
 @keyframes rotating {
   from {
